# v0-aztec-gpu-prover

./: CLAUDE.md
barretenberg/cpp/: CMakeLists.txt  bootstrap.sh
barretenberg/cpp/src/barretenberg/ecc/: CMakeLists.txt
barretenberg/cpp/src/barretenberg/ecc/scalar_multiplication/: scalar_multiplication.cpp
barretenberg/cpp/src/barretenberg/gpu/: Makefile  cpu_gpu_integration.cpp  cuda_msm.cpp  cuda_msm.cu  cuda_msm_direct.cu  cuda_msm_hybrid.cu  cuda_msm_pippenger.cu  debug_msm.cu  gpu_accelerated_functions.cu  gpu_affine_acceleration.cu  gpu_consume_point_schedule.cu  msm_cuda.cu
barretenberg/cpp/src/barretenberg/lmdblib/: lmdb_environment.test.cpp  lmdb_store.test.cpp
barretenberg/cpp/src/barretenberg/vm2/constraining/relations/: op_decomposition.test.cpp
